name:                Recombinase
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kebertx/Recombinase#readme
license:             BSD3
license-file:        LICENSE
author:              Jesse Maes
maintainer:          kebertyx@gmail.com
copyright:           2017 Jesse Maes
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DNA
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable recombinase
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Recombinase
  default-language:    Haskell2010

test-suite Recombinase-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Recombinase
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kebertx/Recombinase
